feat: Implement dynamic API base URL configuration for frontend portals and add Windows helper scripts for running and displaying access URLs.